# haskell-ray-tracer-in-a-weekend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hie.yaml  hlint.yaml  image.ppm  index.html  justfile  ray-tracing-haskell.cabal
app/: Camera.hs  Color.hs  Interval.hs  Main.hs  Material.hs  Ray.hs  Sphere.hs  V2.hs  V3.hs  Window.hs  World.hs
