cabal-version:      3.4
name:               ray-tracing-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ray-tracing-haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    V3, Interval
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, mtl
    hs-source-dirs:   app
    default-language: GHC2021
